--- a/src/index.css
+++ b/src/index.css
@@ -15,8 +15,8 @@ body {
   width: 100%;
   height: 100%;
   overflow: hidden;
-  background-color: hsl(var(--bg-111));
-  color: hsl(var(--bg-fff));
+  background-color: hsl(var(--light-1));
+  color: hsl(var(--dark-1));
   font-family: 'Poppins';
   font-size: 1rem;
 }
